BLAST Search (#381): alignment layout fix. Empty history table text.

--- a/client/client/app/components/ngbBlastSearchPanel/ngbBlastSearchAlignmentList/ngbBlastSearchAlignment/ngbBlastSearchAlignment.scss
+++ b/client/client/app/components/ngbBlastSearchPanel/ngbBlastSearchAlignmentList/ngbBlastSearchAlignment/ngbBlastSearchAlignment.scss
@@ -18,7 +18,7 @@
 
     div.right > span {
       text-align: right;
-      margin-left: 10px;
+      margin-left: 14px;
     }
 
     div.center > span {
