--- a/client/client/app/components/ngbBlastSearchPanel/ngbBlastSearchAlignmentList/ngbBlastSearchAlignmentList.scss
+++ b/client/client/app/components/ngbBlastSearchPanel/ngbBlastSearchAlignmentList/ngbBlastSearchAlignmentList.scss
@@ -11,4 +11,7 @@
 }
 .alignment-hidden {
   visibility: hidden;
+  .blast-search-alignment-container {
+    margin-right: -10px;
+  }
 }
